	PR c++/48884 	* class.c (pushclass): Accept NULL argument. 	(popclass): Deal with popping null class. 	* pt.c (push_access_scope, pop_access_scope): Use them rather than 	push_to_top_level/pop_from_top_level. 	(push_deduction_access_scope, pop_defarg_context): New. 	(fn_type_unification): Use them. 	* name-lookup.c (lookup_name_real_1): Check current_class_type.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@174139 138bc75d-0d04-0410-961f-82ee72b054a4